--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Photo -->
 
     <main>
-        <img src="code.jpeg" alt="">
+        <img src="/media/code.jpeg" alt="">
     </main>
 
     <!-- Courses -->
@@ -35,9 +35,9 @@
         </div>
 
         <div id="icon" class="row icon w-100  ">
-            <img class="col-4" src="web-design-icon.webp" alt="">
-            <img class="col-4" src="png-transparent-web-development-web-design-web-developer-computer-icons-developer-text-web-application-mobile-app-development.png" alt="">
-            <img class="col-4" src="android.png" alt="">
+            <img class="col-4" src="/media/web-design-icon.webp" alt="">
+            <img class="col-4" src="/media/web-development-icon-png-clipart-website-development-web-dev-icon-11562967383vhxlfmnerz.png" alt="">
+            <img class="col-4" src="/media/android.png" alt="">
         </div>
 
         <div class="row">
@@ -82,7 +82,7 @@
         <h1 class="d-flex justify-content-center ">Why choose us?</h1><br>
 
         <div id="peoplecoding">
-        <img src="peoplecoding.jpeg" alt="">
+        <img src="/media/peoplecoding.jpeg" alt="">
         </div><br>
 
         <div class="row d-flex justify-content-center">
@@ -106,19 +106,19 @@
     <div class="row">
         <div class="emailmobile">
             <div>
-                <img id="email" src="email.jpeg" alt="">
+                <img id="email" src="/media/email.jpeg" alt="">
                 <h3>E-mail</h3>
                 <p>geek@gmail.com</p>
             </div>
 
             <div>
-                <img id="email" src="tel.jpeg" alt="">
+                <img id="email" src="/media/tel.jpeg" alt="">
                 <h3>Mobile</h3>
                 <p>8212341487,9080140989</p>
             </div>
 
             <div>
-                <img id="email" src="address.jpeg" alt="">
+                <img id="email" src="/media/address.jpeg" alt="">
                 <h3>Address</h3>
                 <p>Noida Sector 136 <br>
                 Metro Pillar-237
