--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div><br>
 
         <div class="row d-flex justify-content-center">
-        <p class="col-4">In today's digital world, when there are thousands of online platforms (maybe more than that!) available over the web, it becomes quite difficult for students to opt for a quality, relevant and reliable platform for themselves. BOOTCAMP will help you excel in your choice of domain by giving industry equivalent experience.</p>
+        <p class="col-4" id="intodays">In today's digital world, when there are thousands of online platforms (maybe more than that!) available over the web, it becomes quite difficult for students to opt for a quality, relevant and reliable platform for themselves. BOOTCAMP will help you excel in your choice of domain by giving industry equivalent experience.</p>
         </div>
 
         <div id="more">
@@ -94,37 +94,40 @@
         </div><br><br><hr>
 
         <!-- Get In Touch -->
-
+    <div class="getintouch">
         <div class="d-flex justify-content-center">
             <h3>Get inTouch</h3>
         </div>
         <div class="d-flex justify-content-center">
             <p>We are Available</p>
-        </div><br><br><br>
-
+        </div>
+    </div>
 
     <div class="row">
-        <div class="emailmobile">
-            <div>
-                <img id="email" src="/media/email.jpeg" alt="">
-                <h3>E-mail</h3>
-                <p>geek@gmail.com</p>
-            </div>
+        <div class="getintouch">
+                <div class="emailmobile">
+                    <div>
+                        <img id="email" src="/media/email.jpeg" alt="">
+                        <h3>E-mail</h3>
+                        <p>geek@gmail.com</p>
+                    </div>
 
-            <div>
-                <img id="email" src="/media/tel.jpeg" alt="">
-                <h3>Mobile</h3>
-                <p>8212341487,9080140989</p>
-            </div>
+                    <div>
+                        <img id="email" src="/media/tel.jpeg" alt="">
+                        <h3>Mobile</h3>
+                        <p>8212341487,9080140989</p>
+                    </div>
 
-            <div>
-                <img id="email" src="/media/address.jpeg" alt="">
-                <h3>Address</h3>
-                <p>Noida Sector 136 <br>
-                Metro Pillar-237
-                </p>
-            </div>
-         </div><hr>
+                    <div>
+                        <img id="email" src="/media/address.jpeg" alt="">
+                        <h3>Address</h3>
+                        <p>Noida Sector 136 <br>
+                        Metro Pillar-237
+                        </p>
+                    </div>
+                </div>
+        </div>
+         <hr>
 
             <div class="form">
                 <form action="" >
